fix button sizes, ladder text display, circle text and scaling for all languages full screen and mobile

--- a/crowding_out/CrowdingInOutPage.html
+++ b/crowding_out/CrowdingInOutPage.html
@@ -502,7 +502,7 @@
     .label-a {
         position: absolute;
         font-size: 14px;
-        left:calc(50% - 175px);
+        left:calc(50% - 173px);
         top: 75px;
     }
 
@@ -518,6 +518,7 @@
     html.lang-fr .label-charity {transform: translateX(calc(-50% + 5.1em)); }
     html.lang-de .label-charity {transform: translateX(calc(-50% + 5.4em)); }
     html.lang-de_ch .label-charity {transform: translateX(calc(-50% + 5.4em)); }
+    html.lang-ru .label-charity {transform: translateX(calc(-50% + 5em)); }
     html.lang-es .label-charity {transform: translateX(calc(-50% + 5.3em)); }
     html.lang-el .label-charity {transform: translateX(calc(-50% + 5.6em)); }
     html.lang-it .label-charity {transform: translateX(calc(-50% + 5.2em)); }
