--- a/language_selection/LanguageConfirmation.html
+++ b/language_selection/LanguageConfirmation.html
@@ -57,7 +57,7 @@
 
         <div style="text-align: center;">
             <form method="post" style="display: inline-block;">
-                <button class="btn btn-primary" name="confirm_language" value="no" style="margin-left: 1rem;">
+                <button class="btn btn-primary" name="confirm_language" value="no" style="margin-left: 1rem; margin: 0.5rem 0;">
                     {{ button_go_back | safe }}
                     {{ if lang != "en" }}
                         <br> <span style="color: lightgrey;">{{ button_go_back_en | safe }}</span>
