--- a/demographics/Ladder.html
+++ b/demographics/Ladder.html
@@ -121,11 +121,15 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 40px 10px;  /* give top/bottom space for labels */
         }
 
     .ladder-label {
+        width: auto;          /* allow text to expand naturally */
+        max-width: 35%;       /* prevent overflowing wrapper */
+        margin: 15px 0;        /* spacing above/below labels */
         position: absolute;
-        width: 140px;
+        /*width: 140px;*/
         font-size: 12px;
         color: #333;
         font-style: italic;
@@ -133,16 +137,25 @@
     }
 
     .top-label {
+        order: -1; /* ensure it appears above ladder */
         text-align: right;
         left:calc(50% - 60px);
         top: 25px; /* adjust to align with bottom rung */
     }
 
     .bottom-label {
+        order: 1;  /* ensure it appears below ladder */
         text-align: left;
         left:calc(50% - 80px);
         bottom: 18px; /* adjust to align with bottom rung */
     }
+
+    @media (max-width: 550px) {
+         /* adjustments for smartphones */
+         .ladder-label {
+             max-width: 50%;
+         }
+     }
 
 </style>
 
