added final Ukrainian and fixed OR in pref2PP3PP

--- a/pref_2PP_3PP/Pref_2PP_3PP.html
+++ b/pref_2PP_3PP/Pref_2PP_3PP.html
@@ -309,7 +309,7 @@
                     <b class="label label-person-c">{{ PERSON_spacing|safe }}{{ person_c}}</b>
                 </div>
 
-                <p class="or-label"><u>OR</u></p>
+                <p class="or-label"><u>{{ or_button }}</u></p>
 
                 <div class="image-box">
                     <img id="T2PP-image" src="{% static image2PP %}" alt="Coins" class="T2PP-img" />
