mini visual changes to fit Japanese

--- a/pref_2PP_3PP/Pref_2PP_3PP.html
+++ b/pref_2PP_3PP/Pref_2PP_3PP.html
@@ -293,8 +293,8 @@
 
             <div class='numbers' >
                 <div class="option-row"  data-input="selected-option-1">
-                    <div class="option" data-value="0" > {{ pref_2PP|safe }}</div>
-                    <div class="option" data-value="1" > {{ pref_3PP|safe }}</div>
+                    <div class="option" data-value="0" style="font-size: 15px; "> {{ pref_2PP|safe }}</div>
+                    <div class="option" data-value="1" style="font-size: 15px; "> {{ pref_3PP|safe }}</div>
                 </div>
             </div>
 
@@ -326,8 +326,8 @@
 
         <div class='numbers' >
             <div class="option-row"  data-input="selected-option-1">
-                <div class="option" data-value="1" > {{ pref_3PP|safe }}</div>
-                <div class="option" data-value="0" > {{ pref_2PP|safe }}</div>
+                <div class="option" data-value="1" style="font-size: 15px; "> {{ pref_3PP|safe }}</div>
+                <div class="option" data-value="0" style="font-size: 15px; "> {{ pref_2PP|safe }}</div>
             </div>
         </div>
 
