--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -36,7 +36,7 @@
 
   <div>
 
-      <p>
+      <p style="word-break: keep-all;">
           {{ consent_thank_you }}
       </p>
 
@@ -103,46 +103,46 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script>
-let apiKey = "{{ ipregistry_key }}";
-console.log(apiKey)
 
-function roundCoord(coord, precision = 0.5) {
-    return Math.round(coord / precision) * precision;
-}
+    let apiKey = "{{ ipregistry_key }}";
+    console.log(apiKey)
 
-$.getJSON('https://api.ipregistry.co/?key=' + apiKey, function(data) {
+    function roundCoord(coord, precision = 0.5) {
+        return Math.round(coord / precision) * precision;
+    }
 
-    //console.log(data)
+    $.getJSON('https://api.ipregistry.co/?key=' + apiKey, function (data) {
 
-    let lat = data.location.latitude;
-    let lon = data.location.longitude;
+        //console.log(data)
 
-    // Round to 0.5° grid (~50 km)
-    let roundedLat = roundCoord(lat, 0.5);
-    let roundedLon = roundCoord(lon, 0.5);
+        let lat = data.location.latitude;
+        let lon = data.location.longitude;
 
-    let geoInfo = {
-        country_code3: data.location.country.code || '',
-        country_name: data.location.country.name || '',
-        region: data.location.region.name || '',
-        city: data.location.city || '',
-        latitude_rounded: roundedLat || 999,
-        longitude_rounded: roundedLon || 999,
-        time_zone: data.time_zone.name || '',
-        current_time: data.time_zone.current_time || '',
-        is_proxy: data.security.is_proxy || false,
-        is_vpn: data.security.is_vpn || false,
-        is_tor: data.security.is_tor || false,
-        is_anonymous: data.security.is_anonymous || false,
-        mobile_desktop: data.user_agent.device.type || '',
-        browser: data.user_agent.name || ''
-    };
+        // Round to 0.5° grid (~50 km)
+        let roundedLat = roundCoord(lat, 0.5);
+        let roundedLon = roundCoord(lon, 0.5);
 
-    liveSend({ geo_data: geoInfo });
+        let geoInfo = {
+            country_code3: data.location.country.code || '',
+            country_name: data.location.country.name || '',
+            region: data.location.region.name || '',
+            city: data.location.city || '',
+            latitude_rounded: roundedLat || 999,
+            longitude_rounded: roundedLon || 999,
+            time_zone: data.time_zone.name || '',
+            current_time: data.time_zone.current_time || '',
+            is_proxy: data.security.is_proxy || false,
+            is_vpn: data.security.is_vpn || false,
+            is_tor: data.security.is_tor || false,
+            is_anonymous: data.security.is_anonymous || false,
+            mobile_desktop: data.user_agent.device.type || '',
+            browser: data.user_agent.name || ''
+        };
 
-});
+        liveSend({geo_data: geoInfo});
+
+    });
 </script>
-
 
 
 {% endblock %}
