remove this-is-not-attention-check and correct error message in rule following task

--- a/rule_following/RuleFollowing.html
+++ b/rule_following/RuleFollowing.html
@@ -260,9 +260,9 @@
         </p>
         {{ endif }}
 
-        <p style="text-align: center; ">
-            {{ rule_not_attention_check }}
-        </p>
+<!--        <p style="text-align: center; ">-->
+<!--            {{ rule_not_attention_check }}-->
+<!--        </p>-->
 
         <p style="text-align: center; ">
             <b> {{ rule_rule }} </b>
