remove text from redirects except speeders and remove visible links

--- a/demographics/TolunaLink.html
+++ b/demographics/TolunaLink.html
@@ -14,27 +14,23 @@
     <link rel="stylesheet" href="{% static 'shared_styles.css' %}">
 
 
-<div style="font-size: 14px; text-align: center;">
-
-    <p>{{ redirect_wait|safe }}
-        <b><a href="{{ redirect_link|safe }}"> {{ redirect_link|safe }} </a></b>
-    </p>
-
-<!--    <div style="display: flex; justify-content: flex-end">-->
-<!--        <button class="btn btn-primary">{{button_next | safe}}</button>-->
-<!--    </div>-->
-
-</div>
-
 {{ endblock }}
 
 {{ block scripts }}
 
     <script type="text/javascript">
 
-    // The redirect code is now placed inside the function
-        window.location.replace("{{ redirect_link|safe }}");
+
+        // This function will run after a 0 millisecond (0 second) delay
+        setTimeout(function() {
+
+            // The redirect code is now placed inside the function
+            window.location.replace("{{ redirect_link|safe }}");
+
+        }, 0); // The delay in milliseconds
 
     </script>
+
+
 
 {{ endblock }}
