--- a/crowding_out/CrowdingInOutPage.html
+++ b/crowding_out/CrowdingInOutPage.html
@@ -860,15 +860,17 @@ html[dir="rtl"] .image-container {
                 <b> {{ crowding_decision_give|safe }} </b>
                 <div class="charity-logos">
                     <img src="{% static 'global/charities/padded_red_cross.png' %}" alt="Red Cross" data-charity="Red Cross / Red Crescent" class="charity-logo">
+
                     <img src="{% static 'global/charities/padded_unicef.png' %}" alt="Unicef" data-charity="Unicef" class="charity-logo">
                     <img src="{% static 'global/charities/padded_wfp.png' %}" alt="World Food Programme" data-charity="World Food Programme" class="charity-logo">
                     <img src="{% static 'global/charities/padded_The_Salvation_Army.png' %}" alt="The Salvation Army" data-charity="The Salvation Army" class="charity-logo">
-                    <img src="{% static 'global/charities/padded_who.png' %}" alt="World Health Organization" data-charity="World Health Organization" class="charity-logo">
                     <img src="{% static 'global/charities/padded_WWF.png' %}" alt="World Wildlife Fund" data-charity="World Wildlife Fund" class="charity-logo">
 
-<!--                    {% if local_red_cross != "Unknown" %}-->
-<!--                        <img src="{% static image_red_cross_local %}" alt="Red Cross (local)" data-charity="{{ local_red_cross }}" class="charity-logo">-->
-<!--                    {% endif %}-->
+<!--                    <img src="{% static 'global/charities/padded_who.png' %}" alt="World Health Organization" data-charity="World Health Organization" class="charity-logo">-->
+
+                    {% if local_red_cross != "Unknown" %}
+                        <img src="{% static image_red_cross_local %}" alt="Red Cross (local)" data-charity="Red Cross (local)" class="charity-logo">
+                    {% endif %}
 
                 </div>
             </div>
@@ -883,15 +885,17 @@ html[dir="rtl"] .image-container {
                 <b> {{ crowding_decision_give|safe }} </b>
                 <div class="charity-logos">
                     <img src="{% static 'global/charities/padded_red_cross.png' %}" alt="Red Cross" data-charity="Red Cross / Red Crescent" class="charity-logo">
+
                     <img src="{% static 'global/charities/padded_unicef.png' %}" alt="Unicef" data-charity="Unicef" class="charity-logo">
                     <img src="{% static 'global/charities/padded_wfp.png' %}" alt="World Food Programme" data-charity="World Food Programme" class="charity-logo">
                     <img src="{% static 'global/charities/padded_The_Salvation_Army.png' %}" alt="The Salvation Army" data-charity="The Salvation Army" class="charity-logo">
-                    <img src="{% static 'global/charities/padded_who.png' %}" alt="World Health Organization" data-charity="World Health Organization" class="charity-logo">
                     <img src="{% static 'global/charities/padded_WWF.png' %}" alt="World Wildlife Fund" data-charity="World Wildlife Fund" class="charity-logo">
 
-<!--                    {% if local_red_cross != "Unknown" %}-->
-<!--                        <img src="{% static image_red_cross_local %}" alt="Red Cross (local)" data-charity="{{ local_red_cross }}" class="charity-logo">-->
-<!--                    {% endif %}-->
+<!--                    <img src="{% static 'global/charities/padded_who.png' %}" alt="World Health Organization" data-charity="World Health Organization" class="charity-logo">-->
+
+                    {% if local_red_cross != "Unknown" %}
+                        <img src="{% static image_red_cross_local %}" alt="Red Cross (local)" data-charity="Red Cross (local)" class="charity-logo">
+                    {% endif %}
 
                 </div>
             </div>
@@ -1158,7 +1162,7 @@ html[dir="rtl"] .image-container {
     const knownCharities = {
         "Red Cross / Red Crescent": "padded_red_cross.png",
         //"Red Cross (local)": "padded_red_cross_local.png", // replace if needed
-        "Red Cross (local)": image_red_cross_local,
+        "Red Cross (local)": image_red_cross_local.replace(/^global\/charities\//, ''),
         "The Salvation Army": "padded_The_Salvation_Army.png",
         "Unicef": "padded_unicef.png",
         "World Food Programme": "padded_wfp.png",
