update files and zh-HK language version

--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -437,7 +437,7 @@
                 {% endif %}
 
                 <div class="you-dictator">
-                    <b>&nbsp;{{ YOU_spacing|safe }}{{ you|safe }}</b>
+                    <b>{{ YOU_spacing|safe }}{{ you|safe }}</b>
                 </div>
 
             </div>
