remove gender other for Arabic countries

--- a/consent_demographics_age_gender/Demographics_age_gender.html
+++ b/consent_demographics_age_gender/Demographics_age_gender.html
@@ -58,10 +58,14 @@
                 {{male}}
             </label><br/>
 
+            {% if current_country not in ["dz", "eg", "ma", "sa", "ae"] %}
+
             <label>
                 <input type="radio" name="gender" value="Other"/>
                 {{other}}
             </label><br/>
+
+            {% endif %}
 
             <label>
                 <input type="radio" name="gender" value="Prefer not to say"/>
