correct quotas for China and charity select unspecified

--- a/giving_task/GivingPage.html
+++ b/giving_task/GivingPage.html
@@ -1123,9 +1123,7 @@ html[dir="rtl"] .image-container {
     donateOption.addEventListener('click', function (event) {
         if (!selectedCharity) {
             const fallbackCharities = [
-                "Red Cross / Red Crescent",
-                "Unicef",
-                "World Food Programme"
+                "Unspecified"
             ];
             const randomCharity = fallbackCharities[Math.floor(Math.random() * fallbackCharities.length)];
             hiddenCharityField.value = randomCharity;
